log
Wed 20 Mar 2024 11:50:45 PM UTC: 
 tests:  0|5
total_score: 0/70
53792e8
Wed 20 Mar 2024 11:59:00 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7bf78d5
Thu 21 Mar 2024 12:00:58 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
3afae74
Thu 21 Mar 2024 12:02:13 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
f37686c
Thu 21 Mar 2024 12:04:25 AM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
fdf4185
Thu 21 Mar 2024 12:06:59 AM UTC: 
 exercises.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  3|2
total_score: 40/70
8d37f2e
Thu 21 Mar 2024 01:15:41 AM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:52:26: error: statement with no effect [-Werror=unused-value]
   52 |        pushBack(L, dato);2
      |                          ^
exercises.c:52:27: error: expected ‘;’ before ‘}’ token
   52 |        pushBack(L, dato);2
      |                           ^
      |                           ;
   53 |      }
      |      ~                     
cc1: all warnings being treated as errors
Compilation failed
f8a102f
Thu 21 Mar 2024 01:16:05 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
7618721
Thu 21 Mar 2024 01:16:53 AM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|1
total_score: 50/70
061b524
Thu 21 Mar 2024 01:51:25 AM UTC: 
 exercises.c | 17 ++---------------
 1 file changed, 2 insertions(+), 15 deletions(-)
 tests:  3|2
total_score: 40/70
b0ab463
Thu 21 Mar 2024 03:52:22 PM UTC: 
 exercises.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:5:
test.c: In function ‘copia_pila’:
exercises.c:116:14: error: ‘elem’ is used uninitialized [-Werror=uninitialized]
  116 |   while(elem != NULL)
      |              ^
exercises.c:109:14: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
  109 |   while(dato != NULL)
      |              ^
cc1: all warnings being treated as errors
Compilation failed
b27271e
Thu 21 Mar 2024 03:54:33 PM UTC: 
 exercises.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 40/70
031158d
Thu 21 Mar 2024 03:55:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
41b875d
Thu 21 Mar 2024 03:55:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
b9de299
